cmake_minimum_required(VERSION 2.8)
project(faustop)

set(FAUSTOP_VERSION_MAJOR 0)
set(FAUSTOP_VERSION_MINOR 2)
set(FAUSTOP_VERSION_PATCH 0)

set(INSTALL_DIR /usr/share/faustop)

install(DIRECTORY audios DESTINATION ${INSTALL_DIR})
install(FILES faustop DESTINATION /usr/bin
        PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ)

set(CPACK_GENERATOR "DEB")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Uilian Ries <uilianries@gmail.com>")

set(CPACK_PACKAGE_VERSION "${FAUSTOP_VERSION_MAJOR}.${FAUSTOP_VERSION_MINOR}.${FAUSTOP_VERSION_PATCH}")
set(CPACK_PACKAGE_VERSION_MAJOR "${FAUSTOP_VERSION_MAJOR}")
set(CPACK_PACKAGE_VERSION_MINOR "${FAUSTOP_VERSION_MINOR}")
set(CPACK_PACKAGE_VERSION_PATCH "${FAUSTOP_VERSION_PATCH}")
set(CPACK_SOURCE_IGNORE_FILES "${CMAKE_SOURCE_DIR}/build/;${CMAKE_SOURCE_DIR}/.git/")

include(CPack)
